added content to index.html and style.css

--- a/index.html
+++ b/index.html
@@ -14,8 +14,21 @@
     <h1>Justin Haase</h1>
 
     <h2>Objective</h2>
+
     <h2>Work Experience</h2>
+    <li>Executive Referral Manager, Mercedes-Benz USA, LLC 2007 - 2018</li>
+    <li>Customer Assistance Representative, Mercedes-Benz USA, LLC 2003 - 2007</li>
     <h2>Education</h2>
+    <li>Bachelor of Fine Arts, William Paterson University 2010</li>
+    <li>Programming (HTML, CSS, JavaScript), Code Differently 2020</li>
+    <h2>Skills</h2>
+    <li>Programming in HTML, CSS, & JavaScript</li>
+    <li>Proficiency in Microsoft Office Suite,  Adobe Photoshop, Adobe Illustrator, & Adobe Premiere</li>
+    
+    <footer>
+    <h2>You can find me on Linkedin</h2>
+    <h2>Or you can send me an Email</h2>
+    </footer>
     
 
 </body>
