--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
    
     <section id="Objective">
         <h2>Objective</h2>
+            <p>To obtain employment in field of web development?</p>
     </section>
 
     <section id="Work Experience">
@@ -36,8 +37,8 @@
     </section>
 
     <footer>
-        <h2>You can find me on Linkedin</h2>
-        <h2>Or you can send me an Email</h2>
+        <h2>You can find me on Linkedin<a href="https://www.linkedin.com/"><img src="images/LI_icon.png"alt="Image" style="width:40px;height: 40px"></a></h2>
+        <h2>Or you can send me an email<a href="mailto:JustinRHaase@gmail.com"><img src="images/Gmail_icon.png"alt="Image" style="width:40px;height: 40px"></a></h2>
     </footer>
     
 
