added further content to index.html and style.css

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <header>
-        <img src="images/portrait.jpg"alt="Image" style="width:25%;height25%" class="center">
+        <img src="images/portrait.jpg"alt="Image of a handsome boy" style="width:25%;height25%" class="center">
        <h1>Justin Haase</h1>
     </header>
    
     <section id="Objective">
         <h2>Objective</h2>
-            <p>To obtain employment in field of web development?</p>
+            <p>To obtain employment in field of web development? To create something beautiful. To boldly go where no one has gone before.</p>
     </section>
 
     <section id="Work Experience">
@@ -37,8 +37,10 @@
     </section>
 
     <footer>
-        <h2>You can find me on Linkedin<a href="https://www.linkedin.com/"><img src="images/LI_icon.png"alt="Image" style="width:40px;height: 40px"></a></h2>
-        <h2>Or you can send me an email<a href="mailto:JustinRHaase@gmail.com"><img src="images/Gmail_icon.png"alt="Image" style="width:40px;height: 40px"></a></h2>
+        <ul>Find me on Linkedin</ul>
+        <ul><a href="https://www.linkedin.com/"><img src="images/LI_icon.png"alt="https://www.linkedin.com/JustinRHaase" style="width:40px;height: 40px"></a></ul>
+        <ul>Send me an email</ul>
+        <ul><a href="mailto:JustinRHaase@gmail.com"><img src="images/Gmail_icon.png"alt="JustinRHaase@gmail.com" style="width:40px;height: 40px"></a></ul>
     </footer>
     
 
